Update project files without large binaries